fix layout scrolling bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,8 @@ body {
 .openerGrid{
   display: flex;
   flex-wrap: wrap;
+  column-gap: 10px;
+  row-gap: 50px;
 }
 
 .featureGrid{
@@ -234,13 +236,11 @@ body {
 }
 
 .flexHalf{
-  margin-top: 50px;
   flex: 1 1 300px;
 }
 
 .splash{
   width: 100%;
-  margin: 20px 20px 20px 20px;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
 }
 
@@ -259,6 +259,8 @@ h1{
   background: rgb(17,153,122);
   background: linear-gradient(167deg, rgba(17,153,122,1) 0%, rgba(213,207,12,1) 100%);
   color: #ffffff;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .reviews{
